--- a/example/index.html
+++ b/example/index.html
@@ -84,6 +84,7 @@
             list-style: none;
             width: 300px;
             margin: 0 auto;
+            padding: 0;
         }
 
         li {
