--- a/example/index.html
+++ b/example/index.html
@@ -103,6 +103,10 @@
             margin-top: 10px;
         }
 
+        .links {
+            text-align: center
+        }
+
     </style>
     <script>
         $(function(){
@@ -178,7 +182,7 @@
     </div>
 
     <p class="cue">For more info:</p>
-    <p>Check out ....</p>
+    <p class="links">Github Link: <a href="https://github.com/colintoh/pivoton">Github</a></p>
 
 </body>
 </html>
