--- a/example/index.html
+++ b/example/index.html
@@ -131,14 +131,14 @@
 
     <div class="demo">
         <span>Change this
-            <div class="btn btn-warning">Boring....</div>
+            <div class="btn btn-warning btn-lg">Boring....</div>
         </span>
         <span>to</span>
         <span>this
-        <div data-id="demoBtn" class="btn btn-warning">Oh My..</div></span>
+        <div data-id="demoBtn" class="btn btn-warning btn-lg">Oh My..</div></span>
     </div>
 
-    <p class="first-cue cue">Touch me around the edges:</p>
+    <p class="first-cue cue">Click/Touch me around the edges to pivot me in 8 different directions:</p>
 
     <div class="button-groups">
         <div data-id="largeBtn" class="btn btn-success btn-lg">Large button</div>
